[package]
authors = ["Nathan Fox <fuchsnj@gmail.com>"]
description = """
A client to verify Google JSON web tokens
"""
edition = "2021"
license = "MIT/Apache-2.0"
name = "google-jwt-verify"
readme = "README.md"
repository = "https://github.com/fuchsnj/google-jwt-verify"
version = "0.4.1"

[features]
async = ["async-trait"]
blocking = ["reqwest/blocking"]
default = ["blocking"]

[dependencies]
async-trait = {version = "0.1.68", optional = true}
base64 = "0.21.0"
headers = "0.3.8"
openssl = "0.10.50"
reqwest = {version = "0.11.16"}
serde = "1.0.160"
serde_derive = "1.0.160"
serde_json = "1.0.96"

[dev-dependencies]
tokio = {version = "1", features = ["macros"]}
