[package]
authors = ["Nathan Fox <fuchsnj@gmail.com>"]
description = """
A client to verify Google JSON web tokens
"""
edition = "2021"
license = "MIT/Apache-2.0"
name = "google-jwt-verify"
readme = "README.md"
repository = "https://github.com/fuchsnj/google-jwt-verify"
version = "1.0.2"

[features]
default = ["async"]
async = ["async-trait"]
blocking = ["reqwest/blocking"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
async-trait = { version = "0.1", optional = true }
base64 = "0.22"
headers = "0.4"
reqwest = { version = "0.12", default-features = false }
ring = { version = "0.17", features = ["std"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
thiserror = "1.0.60"
tokio = { version = "1", features = ["macros"] }
